[gd_scene load_steps=2 format=3 uid="uid://d3ysnxdem5log"]

[ext_resource type="Script" path="res://Scenes/Menus/Options/Options.gd" id="1_hhxeu"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hhxeu")
metadata/_edit_vertical_guides_ = [3297.0]

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -46.5
offset_right = 64.0
offset_bottom = 46.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Display" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1
item_count = 3
selected = 0
popup/item_0/text = "Fullscreen"
popup/item_0/id = 0
popup/item_1/text = "Maximized"
popup/item_1/id = 1
popup/item_2/text = "Windowed"
popup/item_2/id = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Volume"

[node name="Volume" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="Keybinds" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Keybinds"

[node name="Offline" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Offline"

[node name="Back3" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="item_selected" from="MarginContainer/VBoxContainer/Display" to="." method="_on_display_item_selected"]
[connection signal="drag_ended" from="MarginContainer/VBoxContainer/HBoxContainer/Volume" to="." method="_on_volume_drag_ended"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Keybinds" to="." method="_on_keybinds_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Offline" to="." method="_on_offline_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back3" to="." method="_on_back_pressed"]
